Snapping faces to another surface does not work properly (with transforms) #72024

Closed
opened 2019-11-28 20:32:44 +01:00 by Kjell Emanuelsson · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Short description of error
When trying to snap-align a selection of polys to another object using face-snapping (with Active, Project unto self and Align rotation to target,) it only works if the edit mesh object does not have transforms (loc,rot,scl). If anything is applied in transforms, the mesh will be distorted.

Exact steps for others to reproduce the error
1- select some faces in an object with transforms (loc,rot,scl), with one active face. ( this will be the "bottom" to align against target mesh)
2- set snapping on, with face mode, Active face, project unto self and align rotation.
3- move the faces towards another objects surface
4-while placing the faces, they will be distorted.

snaperror.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Short description of error** When trying to snap-align a selection of polys to another object using face-snapping (with *Active, Project unto self and Align rotation to target*,) it only works if the edit mesh object does not have transforms (loc,rot,scl). If anything is applied in transforms, the mesh will be distorted. **Exact steps for others to reproduce the error** 1- select some faces in an object with transforms (loc,rot,scl), with one active face. ( this will be the "bottom" to align against target mesh) 2- set snapping on, with face mode, Active face, project unto self and align rotation. 3- move the faces towards another objects surface 4-while placing the faces, they will be distorted. [snaperror.mp4](https://archive.blender.org/developer/F8178204/snaperror.mp4)

Added subscriber: @Kjell-1

Added subscriber: @Kjell-1

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the problem.
Could you provide a simple file demonstrating it?

I can't reproduce the problem. Could you provide a simple file demonstrating it?

Yup! updated with video

Yup! updated with video

This issue was referenced by 3a5d398aaf

This issue was referenced by 3a5d398aaf552c5c5b8662d259bffe3287dc1992

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-11-29 16:06:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72024
No description provided.