Fix T72024: Transform Snap: Alingn Rotation distorts object

Occurs in edit mode when object has no uniform scale.